--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ MarkupSafe==1.1.1
 matplotlib==3.0.3
 nbconvert==5.4.1
 nbformat==4.4.0
+nb-pdf-template==3.0.3
 nbsphinx==0.4.2
 numpy==1.16.2
 pandocfilters==1.4.2
